(*) slices list has links towards the slice page with the details area closed and the nodes area open (*) slice page reviewed for displaying node status and optional node tags tags displayed are the ones for which the category matches 'node*/ui*' the category may also convey tunings for rendering the column (*) cosmetics in the slice page renewal area (*) nodegroups : UI can now add/delete/update nodegroups managing the contents of a nodegroup still can be tedious though (*) tag page fixed, slice/sliver count was wrong, was not showing nodegroups

--- a/planetlab/css/my_slice.css
+++ b/planetlab/css/my_slice.css
@@ -9,10 +9,19 @@ div.my-slice-renewal {
 
 /* internal toggles */
 div#toggle-container-my-slice-persons-current,
-div#toggle-container-my-slice-persons-add,
-div#toggle-container-my-slice-nodes-current,
-div#toggle-container-my-slice-nodes-add {
-/*    background:#fcf7ff; */
-    background: #ccffc7; 
+div#toggle-container-my-slice-nodes-current {
+    background: #f0f0f0;
 }
 
+div#toggle-container-my-slice-persons-add,
+div#toggle-container-my-slice-nodes-add {
+    background: #f0e0e0;
+}
+
+/* qualify enough so that this wins over the even/odd row patterns in tables */
+tbody>tr>td.node-ok {
+    background: #a0f0e6;
+}
+tbody>tr>td.node-ko {
+    background: #ffa7a8;
+}
